syntax = "proto3";

package notification;

message WorkspaceNotification {
    oneof payload {
        UserProfileChange profile_change = 1;
        PermissionChanged permission_changed = 2;
        SectionChanged section_changed = 3;
        ShareViewsChanged share_views_changed = 4;
        MentionablePersonListChanged mentionable_person_list_changed = 5;
        ServerLimit server_limit = 6;
        WorkspaceMemberProfileChanged workspace_member_profile_changed = 7;
    }
}

message UserProfileChange {
    int64 uid = 1;
    optional string name = 2;
    optional string email = 3;
}

message PermissionChanged {
    string object_id = 1;
    uint32 reason = 2;
}

message SectionChanged {
    string data = 1;
}

message MentionablePersonListChanged {
    oneof payload {
        UpdateMemberRole update_member_role = 1;
        PageMention page_mention = 2;
        NewMember new_member = 3;
        RemovedMember removed_member = 4;
    }
}

message NewMember {
    string user_uuid = 1;
}

message RemovedMember {
    string user_uuid = 1;
}

message UpdateMemberRole {
    string user_uuid = 1;
    string email = 2;
    int32 role = 3;
}

message PageMention {
    string user_uuid = 1;
    string view_id = 2;
    int64 mentioned_at = 3;
}

message ShareViewsChanged {
    string view_id = 1;
    repeated string emails = 2;
}

message ServerLimit {
    repeated int32 features = 1;
    uint64 max_users = 2;
    uint64 max_guests = 3;
}

message WorkspaceMemberProfileChanged {
    string user_uuid = 1;
    string name = 2;
    optional string avatar_url = 3;
    optional string cover_image_url = 4;
    optional string custom_image_url = 5;
    optional string description = 6;
}